coreecion rutas relativas II

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
       media="screen and (device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
       href="pwa\apple-touch-startup-image\apple-touch-startup-image-1536x2048.png"
     />
-    <script defer="defer" src="static/js/404.7bc408c2.js"></script>
-    <script defer="defer" src="static/js/main.cb595a96.js"></script>
+    <script defer="defer" src="./static/js/404.7bc408c2.js"></script>
+    <script defer="defer" src="./static/js/main.cb595a96.js"></script>
   </head>
   <body>
     <noscript
